--- a/OldTruck.csproj
+++ b/OldTruck.csproj
@@ -82,7 +82,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>del "E:\SteamLibrary\steamapps\common\My Summer Car\mods\OldTruck.dll"
-copy "F:\MSC\OldTruck\bin\Debug\OldTruck.dll" "E:\SteamLibrary\steamapps\common\My Summer Car\mods"
+copy "F:\MSC\OldTruck\$(OutDir)$(TargetFileName)" "E:\SteamLibrary\steamapps\common\My Summer Car\mods"
 start steam://rungameid/516750</PostBuildEvent>
   </PropertyGroup>
 </Project>
